# AlgoSu

./: .claude-team.json  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  README.md  commitlint.config.js  commitlint.config.mjs  docker-compose.dev.yml  package-lock.json  package.json
.claude/: oracle-system-prompt.md  settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-push
UI/: 00-index.html  01-landing.html  02-login.html  02-login.tsx  03-callback.html  03-callback.tsx  04-github-link.html  04-github-link.tsx  06-dashboard.html  07-analytics.html  07-analytics.tsx  08-studies.html  09-study-create.html  09-study-create.tsx  10-study-detail.html  10-study-detail.tsx  11-study-room.html  12-problems.html  13-problem-create.html  14-problem-detail.html  15-problem-edit.html  18-submissions.html  18-submissions.tsx  19-submission-status.html  20-analysis.html  21-review.html  22-profile.html  23-not-found.html  algosu-ai-result.jsx  algosu-code-review.jsx  algosu-dashboard.jsx  algosu-landing.jsx  algosu-login.jsx  algosu-logos.jsx  algosu-notifications.jsx  algosu-problems.jsx  algosu-study-profile.jsx  algosu-submissions.jsx  shared.css
blog/: .dockerignore  .gitignore  Dockerfile  (+5 more)
services/ai-analysis/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
services/ai-analysis/src/: circuit_breaker.py  claude_client.py  config.py  gemini_client.py  logger.py  main.py  metrics.py  prompt.py  worker.py
services/ai-analysis/tests/: conftest.py  test_circuit_breaker.py  test_claude_client.py  test_config.py  test_gemini_client.py  test_logger.py  test_main.py  test_metrics.py  test_prompt.py  test_worker.py
(+2000 files in other folders)
