[project]
name = "algosu-ai-analysis"
version = "1.0.0"
description = "AlgoSu AI Analysis Service — Claude API 기반 코드 분석"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length is handled by ruff format

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# branch=true 활성화 이후 결합 임계치(lines+branches). 실측 97.43% 기반 97로 설정.
# 향후 branch 커버리지 보강 후 단계적 상향 예정 (Sprint 110 W2-a 이월 후속).
addopts = "--cov=src --cov-fail-under=97"
minversion = "8.0"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
fail_under = 97
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
